@@ -56,6 +56,12 @@
     padding: 15px 0;
     margin-left: 0;
     margin-right: 0;
+    .btn-sm {
+      margin-left: 5px;
+    }
+    .actions {
+      white-space: nowrap;
+    }
   }
 
   .release-meta {
